compiler/tests/language/negative/oopSurfaceRoleCapability/surface/asyncExtractorHiddenAllocation.qn
async extract HttpCtx<...Caps> : pub AsyncBodyExtractor<...Caps> {
  bodyStream<T>() -> Result<BodyStream<T>, IntoHttpError> {
    return heapAllocateStream<T>(request)
  }
}
